Implemented Several Features and Fixes
